@@ -1,3 +1,8 @@
+2008-08-22  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Manifest.addin.xml, MonoDevelop.Debugger.mdp: Extension point
+	  location has changed.
+
 2008-08-18  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Debugger.mdp: Fix reference to Mono.TextEditor. The
